2005-07-17  Bruno Haible  <bruno@clisp.org>

	* po-lex.c (mb_width): Remove gcc warnings on platform with unsigned
	'char' type (e.g. Linux/PowerPC).
	Reported by Jeff Rizzo <riz@netbsd.org>.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msgmerge_SOURCES, xgettext_SOURCES, msgattrib_SOURCES,
	msgcat_SOURCES, msgcomm_SOURCES, msgconv_SOURCES, msgen_SOURCES,
	msgfilter_SOURCES, msggrep_SOURCES, msguniq_SOURCES): On mingw, use
	C++ source code.
	(libgettextsrc_la_LDFLAGS, libgettextpo_la_LDFLAGS): Use LTNOUNDEF.
	(format_CFLAGS): New variable.
	(format.lo): New rule.
	(msg*_CFLAGS, xgettext_CFLAGS): Remove variables.
	(msg*_CPPFLAGS, xgettext_CPPFLAGS): New variables.

2005-05-27  Bruno Haible  <bruno@clisp.org>

	* write-po.c (wrap): Output \a and \v as an escape sequence, like
	\b, \f, \r.
	Suggested by Asgeir Frimannsson <asgeirf@redhat.com>.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msgfmt_SOURCES): Add hash-string.c.
	* Makefile.msvc (msgfmt_OBJECTS): Add hash-string.obj.
	(hash-string.obj): New rule.
	* Makefile.vms (msgfmt_OBJECTS): Add hash-string.obj.
	(hash-string.obj): New rule.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* x-sh.c (open_singlequote_terminator): New variable.
	(saw_opening_singlequote): Set it.
	(phase2_getc): Handle the case of open_singlequote_terminator == '"'.
	(read_word): Likewise. Treat i18n quotes like single quotes with
	terminator '"'.
	Reported by Jakub Bogusz <qboosh@pld-linux.org>.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	Improved error message.
	* msgl-iconv.h (struct conversion_context): New type.
	(convert_string): Add context argument.
	* msgl-iconv.c (conversion_error): New function.
	(convert_string, convert_string_list, convert_msgid, convert_msgstr):
	Add context argument.
	(iconv_message_list): Construct context for them.
	* xgettext.c (convert_string): Add context argument.
	(from_current_source_encoding): Construct context for convert_string.