@@ -1,3 +1,9 @@
+2005-07-26  Bruno Haible  <bruno@clisp.org>
+
+	Fix compilation error on systems without iconv().
+	* xgettext.c (convert_string): Remove fallback macro definition.
+	(from_current_source_encoding) [!HAVE_ICONV]: Just abort here.
+
 2005-07-17  Bruno Haible  <bruno@clisp.org>
 
 	* po-lex.c (mb_width): Remove gcc warnings on platform with unsigned
